# frozesh

./: CMakeLists.txt  Makefile  README.md  my_program
include/: executor.h  parser.h  reader.h  tokenizer.h
src/: aa.c  executor.c  main.c  parser.c  reader.c  tokenizer.c
